# Machine_Learning_as_a_Service_Heroku

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
Fast Api/: Dockerfile  docker-compose.yml  requirements.txt
Fast Api/api/: forecasting.py  predictive.py
Fast Api/app/: main.py
Fast Api/dataset/: grouped_df.csv
Fast Api/models/: lgb_model.joblib
Fast Api/templates/: forcast_form.html  index.html  prediction.html
Machine_Learning_as_a_Service /: README.md
Machine_Learning_as_a_Service /docs/: Makefile  conf.py
docs/: index.rst  make.bat
notebooks/: Data prepration for modeling.ipynb  EDA.ipynb  Experiment 1.ipynb  Forcast.ipynb  Pipeline.ipynb  SARIMA pipeline.ipynb  XGBOOST pipeline.ipynb  XGBOOST.ipynb  fixing pipeline.ipynb  merging.ipynb  predictive model-LGB.ipynb
notebooks/.ipynb_checkpoints/: Data prepration for modeling-checkpoint.ipynb  Machine Learning-checkpoint.ipynb  XGBOOST-checkpoint.ipynb  merging-checkpoint.ipynb
notebooks/forcasting/: Mohammadi_Yasaman-24612626-forcasting_ARIMA.ipynb
notebooks/predicting/: predict.ipynb  predictive model-LGB.ipynb
notebooks/predicting/.ipynb_checkpoints/: predictive model-LGB-checkpoint.ipynb
src/visualization/: Sales-Dashboard.twb
